04.APP/02.test.guestbook/01-7.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-example
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aa10fc41900254598b809fce012f62ce-5b7d9fc55cda4a73.elb.ap-northeast-2.amazonaws.com
    http:
      paths:
        - path: /
          backend:
            serviceName: guestbook
            servicePort: 3000
